<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/container">

    <TextView
        android:id="@+id/quizTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style = "@style/Title"
        android:text="@string/road_sign_quiz" />

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style = "@style/otherText"
        android:text="@string/question_number_1" />

    <ImageView
        android:id="@+id/signImageView"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:srcCompat="@drawable/roundabout"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/guessSignText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style = "@style/otherText"
        android:text="@string/guess_the_road_sign" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/buttonStyle"
            android:text="@string/option_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/buttonStyle"
            android:text="@string/option_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/buttonStyle"
            android:text="@string/option_3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/buttonStyle"
            android:text="@string/option_4" />

    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        style="@style/answerButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit_answer"
        tools:ignore="TextSizeCheck" />


</LinearLayout>